# invoke-msvc-in-org-mode

./: .gitignore  Boost.py  CMakeLists.txt  Common.py  IPackage.py  Invocation.py  README.md  dev-and-test-here.org  dev-and-test.org  example_C++_in_org_mode.org  invoke-msvc-2022-common.json  main.py
examples/: ch01.hpp  oneAPI-TBB.org  rapidxml_ext.h  simple-boost-filesystem.org  simple-vcpkg-poco.org  simple-vcpkg.org  vcpkg-armadillo.org  vcpkg-rapidxml.org  vcpkg-tbb.org
